# momentum

./: .gitignore  README.md  hooks.json.example  specs.md
.cursor/plans/: TEMPLATE.plan.md  cursor_dashboard_implementation_f0fd7a7f.plan.md  momentum_home_redesign_5b657367.plan.md
.cursor/rules/: momentum-feature-workflow.mdc
.github/workflows/: publish-runtime.yml
aggregator/: README.md  aggregate.py  pyproject.toml
aggregator/src/aggregator/: __init__.py  __main__.py  achievements.py  hooks_config.py  insights.py  replay.py  runtime.py  state.py  updater.py  xp.py
aggregator/tests/: test_aggregate_e2e.py  test_collector_golden.sh  test_hooks_config.py  test_replay.py  test_runtime.py  test_runtime_registration.py  test_updater.py  test_xp.py
collector/: collector.sh
dashboard/: index.html  package.json  vite.config.ts
dashboard/public/: sample-state.json
dashboard/src/: api.test.ts  api.ts  app.test.ts  app.ts  data-source.test.ts  data-source.ts  home.ts  main.ts  model-usage.test.ts  model-usage.ts  preferences.test.ts  preferences.ts  settings.test.ts  settings.ts  types.test.ts  types.ts
docs/: README.md
docs/memory/: agent-handoff.md  decision-log.md  glossary.md  status-model.md
docs/north-star/: mission-and-values.md  positioning.md  product-principles.md
docs/personas/: context-personas.md  progression-stages.md  user-jobs-and-flows.md
docs/product/: current-state.md  (+4 more)
scripts/: dev-server.sh  install.sh  package_runtime_release.py
transcripts/: cursor_app_development_next_steps_brain.md  cursor_dashboard_brainstorming.md
(+11 files in other folders)
